# AgenticStoreUCP

./: LICENSE  Makefile  README.md  README_ENG.md
backend/: .env  pyproject.toml  requirements.txt
backend/data/: books_catalog.csv  data.md  discount_codes.csv  products.db  transactions.db
backend/scripts/: demo_ap2.py
backend/src/: __init__.py  config.py  main.py  src.md
backend/src/agents/: __init__.py  agents.md  graph.py  llm.py  state.py
backend/src/agents/a2a/: __init__.py  a2a.md  adapters.py  handler.py  protocol.py
backend/src/agents/nodes/: __init__.py  discovery.py  nodes.md  orchestrator.py  recommend.py  shopping.py
backend/src/db/: __init__.py  database.py  db.md  discounts.py  import_books.py  payments.py  products.py  transactions.py
backend/src/mcp/: __init__.py  http_server.py  mcp.md  progressive_disclosure.py  registry.py  server.py
backend/src/mcp/tools/: __init__.py  cart.py  catalog.py  payments.py  recommendations.py  search.py  tools.md
backend/src/payments/: __init__.py  models.py  psp_simulator.py
backend/src/security/: __init__.py  ap2_adapters.py  ap2_security.py  ap2_types.py  key_manager.py  security.md  signatures.py
backend/src/ucp_server/: __init__.py  discovery.py  server.py  ucp.md
backend/src/ucp_server/capabilities/: __init__.py  capabilities.md  checkout.py  discount.py  fulfillment.py
backend/src/ucp_server/models/: __init__.py  adapters.py  book.py  checkout.py  models.md  payment.py
backend/src/ucp_server/routes/: __init__.py  books.py  checkout.py  payments.py  routes.md
backend/src/ucp_server/services/: __init__.py  payment.py  services.md  shopping.py
backend/tests/: test_security.py  test_websocket.py
user_agent/: .env  demo.py  pyproject.toml  requirements.txt  userAgent.md
user_agent/src/: __init__.py  cli.py  config.py  main.py
user_agent/src/agent/: __init__.py  agent.md  graph.py  llm.py  state.py
user_agent/src/agent/nodes/: __init__.py  chat.py  compare.py  discovery.py  shopping.py
user_agent/src/api/: __init__.py  wallet_routes.py
user_agent/src/clients/: __init__.py  a2a_client.py  client.md  mcp_client.py  ucp_client.py
user_agent/src/registry/: __init__.py
user_agent/src/security/: __init__.py  ap2.md  ap2_client.py  key_manager.py
user_agent/src/wallet/: __init__.py  wallet.md  wallet.py
(+39 files in other folders)
