[project]
name = "user-agent-ucp"
version = "0.1.0"
description = "User Agent - Agente autonomo para comercio UCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph e LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    
    # HTTP Client
    "httpx>=0.27.0",
    "websockets>=12.0",
    
    # Validacao
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Seguranca
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    
    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
    
    # Utilitarios
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[project.scripts]
user-agent = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
